Roll Numbers Added

--- a/article.tex
+++ b/article.tex
@@ -4,7 +4,7 @@
 \graphicspath{ {images/} } 
 \begin{document}
 \title{Application of Graph Colouring}
-\author{Shashvat Kedia , Raghav Kirpekar , Raman Dutt}
+\author{Shashvat Kedia(1610110347) , Raghav Kirpekar(1610110271) ,  Raman Dutt(1610110357)}
 \maketitle
 \begin{abstract}
 A Graph G is a mathematical structure of consisting of two sets V(G) (vertices of G) and E(G) (edges of G). Proper colouring of a graph is an assignment of colours to the vertices such that the adjacent vertices are coloured differently.
@@ -98,7 +98,9 @@ schedule on a particular day. Thus \(\chi\)(G) gives the minimum number of days 
 
 \bibitem{5} C. Avanthay, A. Hertz, N. Zufferey, A variable neighborhood search for graph coloring, European Journal of Operational Research 151 (2) (2003) 379–388. 
 
-\bibitem {6} E. Falkenauer, A hybrid grouping genetic algorithm for bin packing, Journal of Heuristics 2 (1) (1996) 5–30. 
+\bibitem {6} E. Falkenauer, A hybrid grouping genetic algorithm for bin packing, Journal of Heuristics 2 (1) (1996) 5–30.
+
+\bibitem {7}  
 
 \end{thebibliography}
 
